--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Dicee</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
-    <link rel="stylesheet" href="">
+
+
 
   </head>
   <body>
@@ -25,10 +26,14 @@
 
     </div>
 
+    <div class="refresh-button">
+      <button class="btn" onClick="window.location.href=window.location.href">Click to Spin The Dice!</button>
+    </div>
+
   <script src="index.js"></script>
   </body>
 
   <footer>
-    www 🎲 App Brewery 🎲 com
+    Made with 💕 in Alpine, UT.
   </footer>
 </html>
